[package]
name = "fizzy-rs"
version = "0.0.9"
edition = "2021"
description = "a directory fuzzy finder"
readme = "README.md"
repository = "https://github.com/JamieH01/fizzy/"
license = "Apache-2.0"
keywords = ["cli", "devtool", "tool"]
categories = ["command-line-utilities"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fizzy"
path = "src/main.rs"

[dependencies]
copypasta-ext = "0.4.4"
crossterm = "0.26.1"
defer-lite = "1.0.0"
indicatif = "0.17.5"
xdg-home = "1.0.0"
